--- a/index.html
+++ b/index.html
@@ -24,16 +24,16 @@
         <section class="hero">
             <h2>Photographie d'exception pour vos moments uniques</h2>
             <p>Mariages, événements, shootings pub ou personnels – Capturons l'essence de vos souvenirs.</p>
-            <a href="#galerie" class="btn">Découvrir la Galerie</a>
+            <!-- Bouton "Découvrir la Galerie" supprimé -->
         </section>
 
         <section id="galerie" class="galerie">
             <h2>Nos Réalisations</h2>
             <div class="photos">
-                <img src="images/mariage1.jpg" alt="Mariage" width="300" height="200"> <!-- Remplace par tes images -->
-                <img src="https://via.placeholder.com/300x200/0a2540/ffffff?text=Mariage" alt="Mariage">
-                <img src="https://via.placeholder.com/300x200/1e3a8a/ffffff?text=Événement" alt="Événement">
-                <img src="https://via.placeholder.com/300x200/0a2540/ffffff?text=Shooting" alt="Shooting">
+                <img src="images/mariage1.jpg" alt="Mariage" width="300" height="200"> <!-- Remplace par ta vraie image mariage -->
+                <img src="https://via.placeholder.com/300x200/1e3a8a/ffffff?text=%C3%89v%C3%A9nement" alt="Événement">
+                <img src="https://via.placeholder.com/300x200/0a2540/ffffff?text=Shooting+Pub" alt="Shooting Pub">
+                <img src="https://via.placeholder.com/300x200/1e3a8a/ffffff?text=Shooting+Personnel" alt="Shooting Personnel">
             </div>
             <a href="contact.html" class="btn">Contactez-nous pour un projet</a>
         </section>
