--- a/index.html
+++ b/index.html
@@ -24,7 +24,34 @@
         <section class="hero">
             <h2>Photographie d'exception pour vos moments uniques</h2>
             <p>Mariages, événements, shootings pub ou personnels – Capturons l'essence de vos souvenirs.</p>
-            <!-- Bouton "Découvrir la Galerie" supprimé -->
+        </section>
+
+        <!-- Nouvelle section : Nos Services avec boutons -->
+        <section class="services">
+            <h2>Nos Services</h2>
+            <p>Découvrez nos spécialités en photographie.</p>
+            <div class="services-grid">
+                <a href="mariage.html" class="service-btn">
+                    <div class="service-icon">💒</div>
+                    <h3>Mariage</h3>
+                    <p>Capturez l'émotion de votre jour J avec élégance.</p>
+                </a>
+                <a href="evenement.html" class="service-btn">
+                    <div class="service-icon">🎉</div>
+                    <h3>Événement</h3>
+                    <p>Immortalisez vos rassemblements inoubliables.</p>
+                </a>
+                <a href="shooting-pub.html" class="service-btn">
+                    <div class="service-icon">📸</div>
+                    <h3>Shooting Pub</h3>
+                    <p>Photos professionnelles pour vos campagnes publicitaires.</p>
+                </a>
+                <a href="shooting-personnel.html" class="service-btn">
+                    <div class="service-icon">👤</div>
+                    <h3>Shooting Personnel</h3>
+                    <p>Portraits uniques pour vos projets personnels.</p>
+                </a>
+            </div>
         </section>
 
         <section id="galerie" class="galerie">
