--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <p>Mariages, événements, shootings pub ou personnels – Capturons l'essence de vos souvenirs.</p>
         </section>
 
-        <!-- Nouvelle section : Nos Services avec boutons -->
+        <!-- Section Services (nouvelle, intégrée sans casser le layout) -->
         <section class="services">
             <h2>Nos Services</h2>
             <p>Découvrez nos spécialités en photographie.</p>
