--- a/mariage.html
+++ b/mariage.html
@@ -29,7 +29,7 @@
         <section class="galerie">
             <h2>Galerie Mariage</h2>
             <div class="photos">
-                <img src="images/mariage1.jpg" alt="Mariage 1" width="300" height="200"> <!-- Remplace par tes images mariage -->
+                <img src="images/mariage1.jpg" alt="Mariage 1" width="300" height="200">
                 <img src="https://via.placeholder.com/300x200/1e3a8a/ffffff?text=Mariage+2" alt="Mariage 2">
                 <img src="https://via.placeholder.com/300x200/0a2540/ffffff?text=Mariage+3" alt="Mariage 3">
                 <img src="https://via.placeholder.com/300x200/1e3a8a/ffffff?text=Mariage+4" alt="Mariage 4">
