--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
             <p>Mariages, événements, shootings pub ou personnels – Capturons l'essence de vos souvenirs.</p>
         </section>
 
-        <!-- Section Services (nouvelle, intégrée sans casser le layout) -->
+        <!-- Section renommée : Nos Réalisations (avec boutons vers galeries) -->
         <section class="services">
-            <h2>Nos Services</h2>
+            <h2>Nos Réalisations</h2>
             <p>Découvrez nos spécialités en photographie.</p>
             <div class="services-grid">
                 <a href="mariage.html" class="service-btn">
@@ -54,16 +54,7 @@
             </div>
         </section>
 
-        <section id="galerie" class="galerie">
-            <h2>Nos Réalisations</h2>
-            <div class="photos">
-                <img src="images/mariage1.jpg" alt="Mariage" width="300" height="200"> <!-- Remplace par ta vraie image mariage -->
-                <img src="https://via.placeholder.com/300x200/1e3a8a/ffffff?text=%C3%89v%C3%A9nement" alt="Événement">
-                <img src="https://via.placeholder.com/300x200/0a2540/ffffff?text=Shooting+Pub" alt="Shooting Pub">
-                <img src="https://via.placeholder.com/300x200/1e3a8a/ffffff?text=Shooting+Personnel" alt="Shooting Personnel">
-            </div>
-            <a href="contact.html" class="btn">Contactez-nous pour un projet</a>
-        </section>
+        <!-- Section "Nos Réalisations" (galerie) supprimée comme demandé -->
     </main>
 
     <footer>
