--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <p>Mariages, événements, shootings pub ou personnels – Capturons l'essence de vos souvenirs.</p>
         </section>
 
+        <!-- Section "Nos Réalisations" (boutons vers galeries) -->
         <section class="services">
             <h2>Nos Réalisations</h2>
             <p>Découvrez nos spécialités en photographie.</p>
