--- a/about.html
+++ b/about.html
@@ -23,9 +23,8 @@
     <main>
         <section class="about">
             <h2>À Propos de Nous</h2>
-            <p>Photographe basé dans le 44, je suis passionné par l'art de figer l'instant pour en faire un souvenir impérissable. Mon objectif ? Saisir la magie des moments qui comptent, qu'il s'agisse de la complicité étincelante d'un mariage, de l'énergie unique d'un événement ou de la personnalité qui se dégage lors d'un portrait.</p>
-            <p>Je crois que les plus belles photos sont celles où l'on oublie l'appareil. Mon approche est donc à la fois bienveillante et discrète, mêlant conseils avisés et capture spontanée des rires, des regards et des émotions pures. Guidé par une lumière naturelle que je chéris et un équipement professionnel, je m'engage à transformer vos précieux souvenirs en véritables œuvres d'art, authentiques et intemporelles.</p>
-            <p>Fort de plusieurs années d'expérience, je me déplace dans toute la France pour immortaliser votre histoire. N'hésitez pas à me contacter pour en discuter autour d'un café.</p>
+            <p>Bonjour, je suis Gabriel, photographe passionné par les moments qui comptent. Spécialisé dans les mariages, événements et shootings photo (pour pubs ou portraits personnels), je capture l'émotion avec un œil expert et un équipement professionnel.</p>
+            <p>Avec des années d'expérience, je transforme vos souvenirs en œuvres d'art. Basé en [ta ville], je couvre toute la France.</p>
             <img src="https://via.placeholder.com/600x400/1e3a8a/ffffff?text=Photo+Gabriel" alt="Gabriel en action" class="about-img">
         </section>
     </main>
