--- a/evenement.html
+++ b/evenement.html
@@ -29,7 +29,7 @@
         <section class="galerie">
             <h2>Galerie Événement</h2>
             <div class="photos">
-                <img src="images/evenement1.jpg" alt="Événement 1" width="300" height="200"> <!-- Remplace par tes images événement -->
+                <img src="images/evenement1.jpg" alt="Événement 1" width="300" height="200">
                 <img src="https://via.placeholder.com/300x200/1e3a8a/ffffff?text=%C3%89v%C3%A9nement+2" alt="Événement 2">
                 <img src="https://via.placeholder.com/300x200/0a2540/ffffff?text=%C3%89v%C3%A9nement+3" alt="Événement 3">
                 <img src="https://via.placeholder.com/300x200/1e3a8a/ffffff?text=%C3%89v%C3%A9nement+4" alt="Événement 4">
