--- a/shooting-pub.html
+++ b/shooting-pub.html
@@ -15,31 +15,4 @@
                 <li><a href="index.html">Accueil</a></li>
                 <li><a href="about.html">À Propos</a></li>
                 <li><a href="contact.html">Contact</a></li>
-                <li><a href="rdv.html">Prendre RDV</a></li>
-            </ul>
-        </nav>
-    </header>
-
-    <main>
-        <section class="hero">
-            <h2>Shooting Pub</h2>
-            <p>Images impactantes pour vos campagnes publicitaires et marketing.</p>
-        </section>
-
-        <section class="galerie">
-            <h2>Galerie Shooting Pub</h2>
-            <div class="photos">
-                <img src="images/shooting-pub1.jpg" alt="Shooting Pub 1" width="300" height="200"> <!-- Remplace par tes images pub -->
-                <img src="https://via.placeholder.com/300x200/1e3a8a/ffffff?text=Shooting+Pub+2" alt="Shooting Pub 2">
-                <img src="https://via.placeholder.com/300x200/0a2540/ffffff?text=Shooting+Pub+3" alt="Shooting Pub 3">
-                <img src="https://via.placeholder.com/300x200/1e3a8a/ffffff?text=Shooting+Pub+4" alt="Shooting Pub 4">
-            </div>
-            <a href="contact.html" class="btn">Demander un Devis Shooting Pub</a>
-        </section>
-    </main>
-
-    <footer>
-        <p>&copy; 2023 L'Objectif de Gabriel. Tous droits réservés.</p>
-    </footer>
-</body>
-</html>
+                <li><a href="rdv.html">Prendre RDV</a
