--- a/shooting-pub.html
+++ b/shooting-pub.html
@@ -13,6 +13,4 @@
             <h1>L'Objectif de Gabriel</h1>
             <ul>
                 <li><a href="index.html">Accueil</a></li>
-                <li><a href="about.html">À Propos</a></li>
-                <li><a href="contact.html">Contact</a></li>
-                <li><a href="rdv.html">Prendre RDV</a
+                <li><a href="about.html">
