--- a/shooting-personnel.html
+++ b/shooting-personnel.html
@@ -29,7 +29,7 @@
         <section class="galerie">
             <h2>Galerie Shooting Personnel</h2>
             <div class="photos">
-                <img src="images/shooting-personnel1.jpg" alt="Shooting Personnel 1" width="300" height="200"> <!-- Remplace par tes images personnel -->
+                <img src="images/shooting-personnel1.jpg" alt="Shooting Personnel 1" width="300" height="200">
                 <img src="https://via.placeholder.com/300x200/1e3a8a/ffffff?text=Shooting+Personnel+2" alt="Shooting Personnel 2">
                 <img src="https://via.placeholder.com/300x200/0a2540/ffffff?text=Shooting+Personnel+3" alt="Shooting Personnel 3">
                 <img src="https://via.placeholder.com/300x200/1e3a8a/ffffff?text=Shooting+Personnel+4" alt="Shooting Personnel 4">
