--- a/mariage.html
+++ b/mariage.html
@@ -29,10 +29,10 @@
         <section class="galerie">
             <h2>Galerie Mariage</h2>
             <div class="photos">
-                <img src="images/mariage1.jpg" alt="Mariage 1" width="300" height="200">
-                <img src="https://via.placeholder.com/300x200/1e3a8a/ffffff?text=Mariage+2" alt="Mariage 2">
-                <img src="https://via.placeholder.com/300x200/0a2540/ffffff?text=Mariage+3" alt="Mariage 3">
-                <img src="https://via.placeholder.com/300x200/1e3a8a/ffffff?text=Mariage+4" alt="Mariage 4">
+                <img src="images/mariage1.jpg" alt="Couple marié en extérieur lors d'un mariage" width="300" height="200"> <!-- Upload mariage1.jpg -->
+                <img src="images/mariage2.jpg" alt="Préparation de la mariée avec maquillage" width="300" height="200"> <!-- Upload mariage2.jpg -->
+                <img src="images/mariage3.jpg" alt="Échange d'anneaux pendant la cérémonie" width="300" height="200"> <!-- Upload mariage3.jpg -->
+                <img src="images/mariage4.jpg" alt="Danse des mariés sous les lumières" width="300" height="200"> <!-- Upload mariage4.jpg -->
             </div>
             <a href="contact.html" class="btn">Demander un Devis Mariage</a>
         </section>
