--- a/evenement.html
+++ b/evenement.html
@@ -29,10 +29,10 @@
         <section class="galerie">
             <h2>Galerie Événement</h2>
             <div class="photos">
-                <img src="images/evenement1.jpg" alt="Événement 1" width="300" height="200">
-                <img src="https://via.placeholder.com/300x200/1e3a8a/ffffff?text=%C3%89v%C3%A9nement+2" alt="Événement 2">
-                <img src="https://via.placeholder.com/300x200/0a2540/ffffff?text=%C3%89v%C3%A9nement+3" alt="Événement 3">
-                <img src="https://via.placeholder.com/300x200/1e3a8a/ffffff?text=%C3%89v%C3%A9nement+4" alt="Événement 4">
+                <img src="images/evenement1.jpg" alt="Groupe lors d'un événement corporatif" width="300" height="200"> <!-- Upload evenement1.jpg -->
+                <img src="images/evenement2.jpg" alt="Animation lors d'une fête familiale" width="300" height="200"> <!-- Upload evenement2.jpg -->
+                <img src="images/evenement3.jpg" alt="Conférence avec public attentif" width="300" height="200"> <!-- Upload evenement3.jpg -->
+                <img src="images/evenement4.jpg" alt="Spectacle en soirée événementielle" width="300" height="200"> <!-- Upload evenement4.jpg -->
             </div>
             <a href="contact.html" class="btn">Demander un Devis Événement</a>
         </section>
