--- a/shooting-pub.html
+++ b/shooting-pub.html
@@ -29,10 +29,10 @@
         <section class="galerie">
             <h2>Galerie Shooting Pub</h2>
             <div class="photos">
-                <img src="images/shooting-pub1.jpg" alt="Shooting Pub 1" width="300" height="200">
-                <img src="https://via.placeholder.com/300x200/1e3a8a/ffffff?text=Shooting+Pub+2" alt="Shooting Pub 2">
-                <img src="https://via.placeholder.com/300x200/0a2540/ffffff?text=Shooting+Pub+3" alt="Shooting Pub 3">
-                <img src="https://via.placeholder.com/300x200/1e3a8a/ffffff?text=Shooting+Pub+4" alt="Shooting Pub 4">
+                <img src="images/shooting-pub1.jpg" alt="Modèle pour campagne publicitaire" width="300" height="200"> <!-- Upload shooting-pub1.jpg -->
+                <img src="images/shooting-pub2.jpg" alt="Produit en shooting professionnel" width="300" height="200"> <!-- Upload shooting-pub2.jpg -->
+                <img src="images/shooting-pub3.jpg" alt="Portrait commercial pour marque" width="300" height="200"> <!-- Upload shooting-pub3.jpg -->
+                <img src="images/shooting-pub4.jpg" alt="Scène publicitaire dynamique" width="300" height="200"> <!-- Upload shooting-pub4.jpg -->
             </div>
             <a href="contact.html" class="btn">Demander un Devis Shooting Pub</a>
         </section>
