--- a/shooting-personnel.html
+++ b/shooting-personnel.html
@@ -29,10 +29,10 @@
         <section class="galerie">
             <h2>Galerie Shooting Personnel</h2>
             <div class="photos">
-                <img src="images/shooting-personnel1.jpg" alt="Shooting Personnel 1" width="300" height="200">
-                <img src="https://via.placeholder.com/300x200/1e3a8a/ffffff?text=Shooting+Personnel+2" alt="Shooting Personnel 2">
-                <img src="https://via.placeholder.com/300x200/0a2540/ffffff?text=Shooting+Personnel+3" alt="Shooting Personnel 3">
-                <img src="https://via.placeholder.com/300x200/1e3a8a/ffffff?text=Shooting+Personnel+4" alt="Shooting Personnel 4">
+                <img src="images/shooting-personnel1.jpg" alt="Portrait personnel en studio" width="300" height="200"> <!-- Upload shooting-personnel1.jpg -->
+                <img src="images/shooting-personnel2.jpg" alt="Shooting extérieur pour portrait" width="300" height="200"> <!-- Upload shooting-personnel2.jpg -->
+                <img src="images/shooting-personnel3.jpg" alt="Séance photo personnelle créative" width="300" height="200"> <!-- Upload shooting-personnel3.jpg -->
+                <img src="images/shooting-personnel4.jpg" alt="Résultat final d'un shooting personnel" width="300" height="200"> <!-- Upload shooting-personnel4.jpg -->
             </div>
             <a href="contact.html" class="btn">Demander un Devis Shooting Personnel</a>
         </section>
