--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
             <p>Photographe basé dans le 44, je suis passionné par l'art de figer l'instant pour en faire un souvenir impérissable. Mon objectif ? Saisir la magie des moments qui comptent, qu'il s'agisse de la complicité étincelante d'un mariage, de l'énergie unique d'un événement ou de la personnalité qui se dégage lors d'un portrait.</p>
             <p>Je crois que les plus belles photos sont celles où l'on oublie l'appareil. Mon approche est donc à la fois bienveillante et discrète, mêlant conseils avisés et capture spontanée des rires, des regards et des émotions pures. Guidé par une lumière naturelle que je chéris et un équipement professionnel, je m'engage à transformer vos précieux souvenirs en véritables œuvres d'art, authentiques et intemporelles.</p>
             <p>Fort de plusieurs années d'expérience, je me déplace dans toute la France pour immortaliser votre histoire. N'hésitez pas à me contacter pour en discuter autour d'un café.</p>
-            <img src="images/gabriel.jpg" alt="Portrait de Gabriel, photographe professionnel" class="about-img"> <!-- Upload gabriel.jpg et c'est prêt -->
+            <img src="images/gabriel.jpg" alt="Portrait de Gabriel, photographe professionnel en action" class="about-img"> <!-- Upload ta photo ici ; taille ajustée via CSS -->
         </section>
     </main>
 
