--- a/mariage.html
+++ b/mariage.html
@@ -28,11 +28,73 @@
 
         <section class="galerie">
             <h2>Galerie Mariage</h2>
-            <div class="photos">
-                <img src="images/mariage1.jpg" alt="Couple marié en extérieur lors d'un mariage" width="300" height="200"> <!-- Upload mariage1.jpg -->
-                <img src="images/mariage2.jpg" alt="Préparation de la mariée avec maquillage" width="300" height="200"> <!-- Upload mariage2.jpg -->
-                <img src="images/mariage3.jpg" alt="Échange d'anneaux pendant la cérémonie" width="300" height="200"> <!-- Upload mariage3.jpg -->
-                <img src="images/mariage4.jpg" alt="Danse des mariés sous les lumières" width="300" height="200"> <!-- Upload mariage4.jpg -->
+            <div class="corkboard">
+                <div class="polaroid">
+                    <img src="images/mariage1.jpg" alt="Couple marié en extérieur">
+                    <div class="pin">📎</div>
+                </div>
+                <div class="polaroid">
+                    <img src="images/mariage2.jpg" alt="Préparation de la mariée">
+                    <div class="pin">📎</div>
+                </div>
+                <div class="polaroid">
+                    <img src="images/mariage3.jpg" alt="Échange d'anneaux">
+                    <div class="pin">📎</div>
+                </div>
+                <div class="polaroid">
+                    <img src="images/mariage4.jpg" alt="Danse des mariés">
+                    <div class="pin">📎</div>
+                </div>
+                <div class="polaroid">
+                    <img src="images/mariage5.jpg" alt="Cérémonie intime">
+                    <div class="pin">📎</div>
+                </div>
+                <div class="polaroid">
+                    <img src="images/mariage6.jpg" alt="Photos de groupe">
+                    <div class="pin">📎</div>
+                </div>
+                <div class="polaroid">
+                    <img src="images/mariage7.jpg" alt="Coucher de soleil mariage">
+                    <div class="pin">📎</div>
+                </div>
+                <div class="polaroid">
+                    <img src="images/mariage8.jpg" alt="Dîner festif">
+                    <div class="pin">📎</div>
+                </div>
+                <div class="polaroid">
+                    <img src="images/mariage9.jpg" alt="Baiser des mariés">
+                    <div class="pin">📎</div>
+                </div>
+                <div class="polaroid">
+                    <img src="images/mariage10.jpg" alt="Décoration florale">
+                    <div class="pin">📎</div>
+                </div>
+                <div class="polaroid">
+                    <img src="images/mariage11.jpg" alt="Mariée seule portrait">
+                    <div class="pin">📎</div>
+                </div>
+                <div class="polaroid">
+                    <img src="images/mariage12.jpg" alt="Marié en costume">
+                    <div class="pin">📎</div>
+                </div>
+                <div class="polaroid">
+                    <img src="images/mariage13.jpg" alt="Fête dansante">
+                    <div class="pin">📎</div>
+                </div>
+                <div class="polaroid">
+                    <img src="images/mariage14.jpg" alt="Détails alliance">
+                    <div class="pin">📎</div>
+                </div>
+                <div class="polaroid">
+                    <img src="images/mariage15.jpg" alt="Fin de soirée émouvante">
+                    <div class="pin">📎</div>
+                </div>
+                <!-- Polaroid vide à la fin -->
+                <div class="polaroid empty">
+                    <div class="empty-text">Bientôt vos photos ici – Contactez-nous pour immortaliser vos moments uniques ! 📸</div>
+                    <a href="contact.html" class="btn small">Ajouter vos souvenirs</a>
+                    <div class="pin">📎</div>
+                </div>
             </div>
             <a href="contact.html" class="btn">Demander un Devis Mariage</a>
         </section>
