--- a/evenement.html
+++ b/evenement.html
@@ -28,11 +28,73 @@
 
         <section class="galerie">
             <h2>Galerie Événement</h2>
-            <div class="photos">
-                <img src="images/evenement1.jpg" alt="Groupe lors d'un événement corporatif" width="300" height="200"> <!-- Upload evenement1.jpg -->
-                <img src="images/evenement2.jpg" alt="Animation lors d'une fête familiale" width="300" height="200"> <!-- Upload evenement2.jpg -->
-                <img src="images/evenement3.jpg" alt="Conférence avec public attentif" width="300" height="200"> <!-- Upload evenement3.jpg -->
-                <img src="images/evenement4.jpg" alt="Spectacle en soirée événementielle" width="300" height="200"> <!-- Upload evenement4.jpg -->
+            <div class="corkboard">
+                <div class="polaroid">
+                    <img src="images/evenement1.jpg" alt="Groupe lors d'un événement corporatif">
+                    <div class="pin">📎</div>
+                </div>
+                <div class="polaroid">
+                    <img src="images/evenement2.jpg" alt="Animation lors d'une fête familiale">
+                    <div class="pin">📎</div>
+                </div>
+                <div class="polaroid">
+                    <img src="images/evenement3.jpg" alt="Conférence avec public attentif">
+                    <div class="pin">📎</div>
+                </div>
+                <div class="polaroid">
+                    <img src="images/evenement4.jpg" alt="Spectacle en soirée événementielle">
+                    <div class="pin">📎</div>
+                </div>
+                <div class="polaroid">
+                    <img src="images/evenement5.jpg" alt="Atelier interactif">
+                    <div class="pin">📎</div>
+                </div>
+                <div class="polaroid">
+                    <img src="images/evenement6.jpg" alt="Buffet festif">
+                    <div class="pin">📎</div>
+                </div>
+                <div class="polaroid">
+                    <img src="images/evenement7.jpg" alt="Discours principal">
+                    <div class="pin">📎</div>
+                </div>
+                <div class="polaroid">
+                    <img src="images/evenement8.jpg" alt="Jeux et animations">
+                    <div class="pin">📎</div>
+                </div>
+                <div class="polaroid">
+                    <img src="images/evenement9.jpg" alt="Photos de groupe">
+                    <div class="pin">📎</div>
+                </div>
+                <div class="polaroid">
+                    <img src="images/evenement10.jpg" alt="Soirée networking">
+                    <div class="pin">📎</div>
+                </div>
+                <div class="polaroid">
+                    <img src="images/evenement11.jpg" alt="Décoration événementielle">
+                    <div class="pin">📎</div>
+                </div>
+                <div class="polaroid">
+                    <img src="images/evenement12.jpg" alt="Performance live">
+                    <div class="pin">📎</div>
+                </div>
+                <div class="polaroid">
+                    <img src="images/evenement13.jpg" alt="Moments joyeux">
+                    <div class="pin">📎</div>
+                </div>
+                <div class="polaroid">
+                    <img src="images/evenement14.jpg" alt="Clôture d'événement">
+                    <div class="pin">📎</div>
+                </div>
+                <div class="polaroid">
+                    <img src="images/evenement15.jpg" alt="Souvenirs collectifs">
+                    <div class="pin">📎</div>
+                </div>
+                <!-- Polaroid vide à la fin -->
+                <div class="polaroid empty">
+                    <div class="empty-text">Bientôt vos photos ici – Contactez-nous pour immortaliser vos moments uniques ! 📸</div>
+                    <a href="contact.html" class="btn small">Ajouter vos souvenirs</a>
+                    <div class="pin">📎</div>
+                </div>
             </div>
             <a href="contact.html" class="btn">Demander un Devis Événement</a>
         </section>
