--- a/shooting-personnel.html
+++ b/shooting-personnel.html
@@ -28,11 +28,73 @@
 
         <section class="galerie">
             <h2>Galerie Shooting Personnel</h2>
-            <div class="photos">
-                <img src="images/shooting-personnel1.jpg" alt="Portrait personnel en studio" width="300" height="200"> <!-- Upload shooting-personnel1.jpg -->
-                <img src="images/shooting-personnel2.jpg" alt="Shooting extérieur pour portrait" width="300" height="200"> <!-- Upload shooting-personnel2.jpg -->
-                <img src="images/shooting-personnel3.jpg" alt="Séance photo personnelle créative" width="300" height="200"> <!-- Upload shooting-personnel3.jpg -->
-                <img src="images/shooting-personnel4.jpg" alt="Résultat final d'un shooting personnel" width="300" height="200"> <!-- Upload shooting-personnel4.jpg -->
+            <div class="corkboard">
+                <div class="polaroid">
+                    <img src="images/shooting-personnel1.jpg" alt="Portrait personnel en studio">
+                    <div class="pin">📎</div>
+                </div>
+                <div class="polaroid">
+                    <img src="images/shooting-personnel2.jpg" alt="Shooting extérieur naturel">
+                    <div class="pin">📎</div>
+                </div>
+                <div class="polaroid">
+                    <img src="images/shooting-personnel3.jpg" alt="Portrait créatif avec lumière douce">
+                    <div class="pin">📎</div>
+                </div>
+                <div class="polaroid">
+                    <img src="images/shooting-personnel4.jpg" alt="Séance photo personnelle dynamique">
+                    <div class="pin">📎</div>
+                </div>
+                <div class="polaroid">
+                    <img src="images/shooting-personnel5.jpg" alt="Portrait en noir et blanc">
+                    <div class="pin">📎</div>
+                </div>
+                <div class="polaroid">
+                    <img src="images/shooting-personnel6.jpg" alt="Shooting lifestyle urbain">
+                    <div class="pin">📎</div>
+                </div>
+                <div class="polaroid">
+                    <img src="images/shooting-personnel7.jpg" alt="Expression faciale authentique">
+                    <div class="pin">📎</div>
+                </div>
+                <div class="polaroid">
+                    <img src="images/shooting-personnel8.jpg" alt="Portrait artistique en nature">
+                    <div class="pin">📎</div>
+                </div>
+                <div class="polaroid">
+                    <img src="images/shooting-personnel9.jpg" alt="Séance photo familiale personnelle">
+                    <div class="pin">📎</div>
+                </div>
+                <div class="polaroid">
+                    <img src="images/shooting-personnel10.jpg" alt="Détails portrait personnel">
+                    <div class="pin">📎</div>
+                </div>
+                <div class="polaroid">
+                    <img src="images/shooting-personnel11.jpg" alt="Shooting introspectif">
+                    <div class="pin">📎</div>
+                </div>
+                <div class="polaroid">
+                    <img src="images/shooting-personnel12.jpg" alt="Portrait avec accessoires">
+                    <div class="pin">📎</div>
+                </div>
+                <div class="polaroid">
+                    <img src="images/shooting-personnel13.jpg" alt="Séance photo relax">
+                    <div class="pin">📎</div>
+                </div>
+                <div class="polaroid">
+                    <img src="images/shooting-personnel14.jpg" alt="Résultat final portrait">
+                    <div class="pin">📎</div>
+                </div>
+                <div class="polaroid">
+                    <img src="images/shooting-personnel15.jpg" alt="Moment personnel capturé">
+                    <div class="pin">📎</div>
+                </div>
+                <!-- Polaroid vide à la fin -->
+                <div class="polaroid empty">
+                    <div class="empty-text">Bientôt vos photos ici – Contactez-nous pour immortaliser vos moments uniques ! 📸</div>
+                    <a href="contact.html" class="btn small">Ajouter vos souvenirs</a>
+                    <div class="pin">📎</div>
+                </div>
             </div>
             <a href="contact.html" class="btn">Demander un Devis Shooting Personnel</a>
         </section>
