--- a/shooting-pub.html
+++ b/shooting-pub.html
@@ -28,11 +28,73 @@
 
         <section class="galerie">
             <h2>Galerie Shooting Pub</h2>
-            <div class="photos">
-                <img src="images/shooting-pub1.jpg" alt="Modèle pour campagne publicitaire" width="300" height="200"> <!-- Upload shooting-pub1.jpg -->
-                <img src="images/shooting-pub2.jpg" alt="Produit en shooting professionnel" width="300" height="200"> <!-- Upload shooting-pub2.jpg -->
-                <img src="images/shooting-pub3.jpg" alt="Portrait commercial pour marque" width="300" height="200"> <!-- Upload shooting-pub3.jpg -->
-                <img src="images/shooting-pub4.jpg" alt="Scène publicitaire dynamique" width="300" height="200"> <!-- Upload shooting-pub4.jpg -->
+            <div class="corkboard">
+                <div class="polaroid">
+                    <img src="images/shooting-pub1.jpg" alt="Modèle pour campagne publicitaire">
+                    <div class="pin">📎</div>
+                </div>
+                <div class="polaroid">
+                    <img src="images/shooting-pub2.jpg" alt="Produit en shooting professionnel">
+                    <div class="pin">📎</div>
+                </div>
+                <div class="polaroid">
+                    <img src="images/shooting-pub3.jpg" alt="Portrait commercial pour marque">
+                    <div class="pin">📎</div>
+                </div>
+                <div class="polaroid">
+                    <img src="images/shooting-pub4.jpg" alt="Scène publicitaire dynamique">
+                    <div class="pin">📎</div>
+                </div>
+                <div class="polaroid">
+                    <img src="images/shooting-pub5.jpg" alt="Campagne mode shooting">
+                    <div class="pin">📎</div>
+                </div>
+                <div class="polaroid">
+                    <img src="images/shooting-pub6.jpg" alt="Publicité produit lifestyle">
+                    <div class="pin">📎</div>
+                </div>
+                <div class="polaroid">
+                    <img src="images/shooting-pub7.jpg" alt="Portrait corporate pub">
+                    <div class="pin">📎</div>
+                </div>
+                <div class="polaroid">
+                    <img src="images/shooting-pub8.jpg" alt="Shooting e-commerce">
+                    <div class="pin">📎</div>
+                </div>
+                <div class="polaroid">
+                    <img src="images/shooting-pub9.jpg" alt="Campagne digitale">
+                    <div class="pin">📎</div>
+                </div>
+                <div class="polaroid">
+                    <img src="images/shooting-pub10.jpg" alt="Images marketing impactantes">
+                    <div class="pin">📎</div>
+                </div>
+                <div class="polaroid">
+                    <img src="images/shooting-pub11.jpg" alt="Shooting pour réseau social">
+                    <div class="pin">📎</div>
+                </div>
+                <div class="polaroid">
+                    <img src="images/shooting-pub12.jpg" alt="Publicité événementielle">
+                    <div class="pin">📎</div>
+                </div>
+                <div class="polaroid">
+                    <img src="images/shooting-pub13.jpg" alt="Portrait pub professionnel">
+                    <div class="pin">📎</div>
+                </div>
+                <div class="polaroid">
+                    <img src="images/shooting-pub14.jpg" alt="Campagne print">
+                    <div class="pin">📎</div>
+                </div>
+                <div class="polaroid">
+                    <img src="images/shooting-pub15.jpg" alt="Shooting créatif pub">
+                    <div class="pin">📎</div>
+                </div>
+                <!-- Polaroid vide à la fin -->
+                <div class="polaroid empty">
+                    <div class="empty-text">Bientôt vos photos ici – Contactez-nous pour immortaliser vos moments uniques ! 📸</div>
+                    <a href="contact.html" class="btn small">Ajouter vos souvenirs</a>
+                    <div class="pin">📎</div>
+                </div>
             </div>
             <a href="contact.html" class="btn">Demander un Devis Shooting Pub</a>
         </section>
