--- a/shooting-personnel.html
+++ b/shooting-personnel.html
@@ -30,70 +30,100 @@
             <h2>Galerie Shooting Personnel</h2>
             <div class="corkboard">
                 <div class="polaroid">
-                    <img src="images/shooting-personnel1.jpg" alt="Portrait personnel en studio">
-                    <div class="pin">📎</div>
+                    <div class="photo-frame">
+                        <img src="images/shooting-personnel1.jpg" alt="Portrait personnel en studio">
+                    </div>
+                    <div class="pin"></div> <!-- Punaise CSS -->
                 </div>
                 <div class="polaroid">
-                    <img src="images/shooting-personnel2.jpg" alt="Shooting extérieur naturel">
-                    <div class="pin">📎</div>
+                    <div class="photo-frame">
+                        <img src="images/shooting-personnel2.jpg" alt="Shooting extérieur naturel">
+                    </div>
+                    <div class="pin"></div>
                 </div>
                 <div class="polaroid">
-                    <img src="images/shooting-personnel3.jpg" alt="Portrait créatif avec lumière douce">
-                    <div class="pin">📎</div>
+                    <div class="photo-frame">
+                        <img src="images/shooting-personnel3.jpg" alt="Portrait créatif avec lumière douce">
+                    </div>
+                    <div class="pin"></div>
                 </div>
                 <div class="polaroid">
-                    <img src="images/shooting-personnel4.jpg" alt="Séance photo personnelle dynamique">
-                    <div class="pin">📎</div>
+                    <div class="photo-frame">
+                        <img src="images/shooting-personnel4.jpg" alt="Séance photo personnelle dynamique">
+                    </div>
+                    <div class="pin"></div>
                 </div>
                 <div class="polaroid">
-                    <img src="images/shooting-personnel5.jpg" alt="Portrait en noir et blanc">
-                    <div class="pin">📎</div>
+                    <div class="photo-frame">
+                        <img src="images/shooting-personnel5.jpg" alt="Portrait en noir et blanc">
+                    </div>
+                    <div class="pin"></div>
                 </div>
                 <div class="polaroid">
-                    <img src="images/shooting-personnel6.jpg" alt="Shooting lifestyle urbain">
-                    <div class="pin">📎</div>
+                    <div class="photo-frame">
+                        <img src="images/shooting-personnel6.jpg" alt="Shooting lifestyle urbain">
+                    </div>
+                    <div class="pin"></div>
                 </div>
                 <div class="polaroid">
-                    <img src="images/shooting-personnel7.jpg" alt="Expression faciale authentique">
-                    <div class="pin">📎</div>
+                    <div class="photo-frame">
+                        <img src="images/shooting-personnel7.jpg" alt="Expression faciale authentique">
+                    </div>
+                    <div class="pin"></div>
                 </div>
                 <div class="polaroid">
-                    <img src="images/shooting-personnel8.jpg" alt="Portrait artistique en nature">
-                    <div class="pin">📎</div>
+                    <div class="photo-frame">
+                        <img src="images/shooting-personnel8.jpg" alt="Portrait artistique en nature">
+                    </div>
+                    <div class="pin"></div>
                 </div>
                 <div class="polaroid">
-                    <img src="images/shooting-personnel9.jpg" alt="Séance photo familiale personnelle">
-                    <div class="pin">📎</div>
+                    <div class="photo-frame">
+                        <img src="images/shooting-personnel9.jpg" alt="Séance photo familiale personnelle">
+                    </div>
+                    <div class="pin"></div>
                 </div>
                 <div class="polaroid">
-                    <img src="images/shooting-personnel10.jpg" alt="Détails portrait personnel">
-                    <div class="pin">📎</div>
+                    <div class="photo-frame">
+                        <img src="images/shooting-personnel10.jpg" alt="Détails portrait personnel">
+                    </div>
+                    <div class="pin"></div>
                 </div>
                 <div class="polaroid">
-                    <img src="images/shooting-personnel11.jpg" alt="Shooting introspectif">
-                    <div class="pin">📎</div>
+                    <div class="photo-frame">
+                        <img src="images/shooting-personnel11.jpg" alt="Shooting introspectif">
+                    </div>
+                    <div class="pin"></div>
                 </div>
                 <div class="polaroid">
-                    <img src="images/shooting-personnel12.jpg" alt="Portrait avec accessoires">
-                    <div class="pin">📎</div>
+                    <div class="photo-frame">
+                        <img src="images/shooting-personnel12.jpg" alt="Portrait avec accessoires">
+                    </div>
+                    <div class="pin"></div>
                 </div>
                 <div class="polaroid">
-                    <img src="images/shooting-personnel13.jpg" alt="Séance photo relax">
-                    <div class="pin">📎</div>
+                    <div class="photo-frame">
+                        <img src="images/shooting-personnel13.jpg" alt="Séance photo relax">
+                    </div>
+                    <div class="pin"></div>
                 </div>
                 <div class="polaroid">
-                    <img src="images/shooting-personnel14.jpg" alt="Résultat final portrait">
-                    <div class="pin">📎</div>
+                    <div class="photo-frame">
+                        <img src="images/shooting-personnel14.jpg" alt="Résultat final portrait">
+                    </div>
+                    <div class="pin"></div>
                 </div>
                 <div class="polaroid">
-                    <img src="images/shooting-personnel15.jpg" alt="Moment personnel capturé">
-                    <div class="pin">📎</div>
+                    <div class="photo-frame">
+                        <img src="images/shooting-personnel15.jpg" alt="Moment personnel capturé">
+                    </div>
+                    <div class="pin"></div>
                 </div>
                 <!-- Polaroid vide à la fin -->
                 <div class="polaroid empty">
                     <div class="empty-text">Bientôt vos photos ici – Contactez-nous pour immortaliser vos moments uniques ! 📸</div>
                     <a href="contact.html" class="btn small">Ajouter vos souvenirs</a>
-                    <div class="pin">📎</div>
+                    <div class="pin"></div>
                 </div>
             </div>
             <a href="contact.html" class="btn">Demander un Devis Shooting Personnel</a>
