--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <section class="hero">
             <h2>Photographie d'exception pour vos moments uniques</h2>
             <p>Mariages, événements, shootings pub ou personnels – Capturons l'essence de vos souvenirs.</p>
+            <a href="contact.html" class="btn hero-btn">Découvrez nos réalisations</a> <!-- Ajout CTA pour fluidité -->
         </section>
 
         <section class="services">
@@ -51,6 +52,7 @@
                     <p>Portraits uniques pour vos projets personnels.</p>
                 </a>
             </div>
+            <a href="contact.html" class="btn">Prêt pour votre projet ? Contactez-nous</a> <!-- CTA en bas pour accueil -->
         </section>
     </main>
 
