--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <section class="hero">
             <h2>Photographie d'exception pour vos moments uniques</h2>
             <p>Mariages, événements, shootings pub ou personnels – Capturons l'essence de vos souvenirs.</p>
-            <a href="contact.html" class="btn hero-btn">Découvrez nos réalisations</a> <!-- Ajout CTA pour fluidité -->
+            <!-- Bouton supprimé comme demandé -->
         </section>
 
         <section class="services">
@@ -52,7 +52,9 @@
                     <p>Portraits uniques pour vos projets personnels.</p>
                 </a>
             </div>
-            <a href="contact.html" class="btn">Prêt pour votre projet ? Contactez-nous</a> <!-- CTA en bas pour accueil -->
+            <div class="cta-section"> <!-- Wrapper pour espace fixe -->
+                <a href="contact.html" class="btn">Prêt pour votre projet ? Contactez-nous</a>
+            </div>
         </section>
     </main>
 
