--- a/contact.html
+++ b/contact.html
@@ -58,7 +58,7 @@
                 <button type="submit" class="btn">Envoyer</button>
             </form>
             <div class="contact-img">
-                <img src="images/contact-style.jpg" alt="Illustration style contact pour photographie" class="contact-img"> <!-- Upload contact-style.jpg ou garde placeholder si pas besoin -->
+                <img src="images/contact-style.jpg" alt="Illustration style contact pour photographie">
             </div>
         </section>
     </main>
